# agent-stuff-learnings

./: ollama-stuff.md
python/: mise.toml
python/echo-bot/: main.ipynb  main.py  pyproject.toml
python/simple-scripts/: pyproject.toml
python/simple-scripts/chatbot/: main-002.py  main-wo-prebuilts.py  main.ipynb  main.py
python/simple-scripts/echo-bot/: main.ipynb  main.py
python/simple-scripts/plan-and-execute/: main.ipynb
python/simple-scripts/weather/: main.py
