[project]
name = "simple-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "langchain-ollama>=0.3.3",
    "langchain-tavily>=0.1.6",
    "langgraph>=0.4.5",
    "langsmith>=0.3.42",
    "nest-asyncio>=1.6.0",
    "pyppeteer>=2.0.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
